# drf_auth

./: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
garage/: settings.py  urls.py
maintenance/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
maintenance/migrations/: 0001_initial.py
